# BestBot

./: .gitignore  Dockerfile  README.md  bestbot.py  devcontainer.json  docker-compose.yml  plog.py  pullrequest.txt  pyproject.toml  rlog.py  settings.json  test.py  test_notify.py
.devcontainer/: Dockerfile  devcontainer.json
config/: config.example.json
config/schema/: config.schema.json
core/: find_values.py  item.py
core/contact_methods/: __init__.py  email_contact.py  phone_contact.py
core/network/: __init__.py  adapter.py  g.py  smtp_server.py
core/utils/: __init__.py  configuration_provider.py  log.py  next_time.py
data/: notifications.py  product.json  product.py  response_data.json  runtime_log.txt
store/bestbuy/: __init__.py  bestbuy_item.py  bestbuy_strategy.py  t.py
store/newegg/: new_egg_cart_url.txt
tests/: test_bestbot.py
tests/container/: pytest.ini  test_pythonpath.py
tests/core/: test_item.py
tests/data/: bestbuy_response.json
