[tool.poetry]
name = "bestbot"
version = "0.1.0"
description = ""
authors = ["armckinney"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.0"
requests = "^2.25.0"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
